--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "chalk": "^4.1.1",
     "dotenv": "^10.0.0"
   }
 }
