--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+config.js 
 # Logs
 logs
 *.log
@@ -32,6 +33,7 @@ coverage
 
 # Bower dependency directory (https://bower.io/)
 bower_components
+
 
 # node-waf configuration
 .lock-wscript
